--- a/TabloGraflo/.classpath
+++ b/TabloGraflo/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/Roma/workspace/TabloGraflo/lib/sqlite-jdbc-3.8.7.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_25/lib/rt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
